<resources>
    <string name="app_name">AttendEase</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="semester">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="degree">
        <item>BE</item>
        <item>ME</item>
        <item>PhD</item>
    </string-array>

    <string-array name="class_type">
        <item>Theory</item>
        <item>Lab</item>
        <item>Project</item>
    </string-array>

    <string-array name="attendance_type">
        <item>Absent</item>
        <item>Present</item>
    </string-array>

    <string-array name="month">
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
    </string-array>

    <string-array name="monthName">
        <item>"Jan"</item>
        <item>"Feb"</item>
        <item>"Mar"</item>
        <item>"Apr"</item>
        <item>"May"</item>
        <item>"June"</item>
        <item>"July"</item>
        <item>"August"</item>
        <item>"Sept"</item>
        <item>"Oct"</item>
        <item>"Nov"</item>
        <item>"Dec"</item>
    </string-array>

    <string-array name="theoryClassSlots">
        <item>08:30</item>
        <item>09:15</item>
        <item>10:00</item>
        <item>10:55</item>
        <item>11:40</item>
        <item>12:25</item>
        <item>01:30</item>
        <item>02:15</item>
        <item>03:00</item>
        <item>03:45</item>
    </string-array>

    <string-array name="labClassSlots">
        <item>08:30</item>
        <item>10:55</item>
        <item>02:15</item>
    </string-array>

    <string-array name="theoryClassDuration">
        <item>45 Minutes</item>
        <item>50 Minutes</item>
        <item>55 Minutes</item>
        <item>60 Minutes</item>
    </string-array>

    <string-array name="labClassDuration">
        <item>90 Minutes</item>
        <item>120 Minutes</item>
        <item>150 Minutes</item>
        <item>180 Minutes</item>
    </string-array>

    <string name="title_activity_manage_class">ManageClass</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="choose_class">Choose Class</string>

    <string name="generate_attendance_report">Generate Attendance Report</string>
    <string name="modify_attendance">Modify Attendance</string>
    <string name="quick_attendance">Quick Attendance</string>
    <string name="view_attendance">View Attendance</string>

    <string name="p">P</string>
    <string name="a">A</string>

    <string name="time">Select Time</string>
    <string name="date">Select Date</string>

    <string name="submit_attendance">Submit Attendance</string>
    <string name="create_your_class">Create your Class</string>
    <string name="get_attendance">Get Attendance</string>

    <string name="class_type">Choose Class Type</string>
    <string name="click_here_to_select_the_file">Click Here to Select the File</string>
    <string name="choose_attendance_type">Choose Attendance Type</string>
    <string name="attendance_details">Attendance Details</string>
    <string name="department">Department</string>
    <string name="theory_class_duration">Theory Class Duration</string>
    <string name="lab_class_duration">Lab Class Duration</string>
    <string name="spend_few_minutes_to_fill_these_details">Spend Few Minutes to Fill these Details</string>
    <string name="hello_professor">Hello, Professor</string>
    <string name="finish_it_off">Finish It Off !!</string>
    <string name="welcome_to_attendease">Welcome to AttendEase</string>
    <string name="get_started_with_your_institution">Get Started with your Institution</string>
    <string name="enter_your_name_in_caps">Enter your Name (In Caps)</string>
    <string name="enter_your_institution_id">Enter your Institution ID</string>
    <string name="let_s_go">Let\'s Go !!</string>
    <string name="create_class">Create Class</string>
    <string name="upload_excel_button">Upload Excel Button</string>
    <string name="class_strength">Class Strength</string>
    <string name="choose_department">Choose Department</string>
    <string name="generate_report">Generate Report</string>
    <string name="an_annamalai_university_product">An Annamalai University Product</string>
    <string name="note_enter_the_comma_separated_values">Note : Enter the Comma Separated Values</string>
    <string name="lateral_entry_number">Lateral Entry Number</string>
    <string name="roll_number">Roll Number</string>
    <string name="degree_here">Degree Here</string>
    <string name="class_here">Class Here</string>
    <string name="semester_here">Semester Here</string>
    <string name="delete_button">Delete Button</string>
    <string name="example">Example</string>
    <string name="testing">Testing</string>
    <string name="excel_view">Excel View</string>
    <string name="an_easy_attendance_manager">An Easy Attendance Manager</string>
    <string name="app_logo">App Logo</string>
    <string name="_0000000000">0000000000</string>
    <string name="student_name_here">Student Name Here</string>
    <string name="absentees_data_goes_here">ABSENTEES DATA GOES HERE</string>
    <string name="note_files_will_be_stored_at_n_local_storage_downloads_attendease">Note : Reports will be Stored at \n Local Storage/Downloads/AttendEase</string>
    <string name="backup_database">Backup Database</string>
    <string name="restore_database">Restore Database</string>

</resources>