<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/addClass"
        android:title="Add Class" />

    <item
        android:id="@+id/manageClass"
        android:title="Manage Class" />

    <item
        android:id="@+id/quickAttendance"
        android:title="@string/quick_attendance" />


    <item
        android:id="@+id/modifyAttendance"
        android:title="@string/modify_attendance" />

    <item
        android:id="@+id/viewAttendance"
        android:title="@string/view_attendance" />

    <item
        android:id="@+id/generateReport"
        android:title="@string/generate_report" />

<!--    <item-->
<!--        android:id="@+id/backupScree"-->
<!--        android:title="Backup Screen" />-->
</menu>