<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".ui.AddClass">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/innerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/create_your_class"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/innerLayout"
                    tools:ignore="SpUsage" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/degreeNameField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/text1">

                    <AutoCompleteTextView
                        android:id="@+id/degreeName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/ebgaramondmedium"
                        android:hint="@string/choose_department"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/classTypeField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/degreeNameField">

                    <AutoCompleteTextView
                        android:id="@+id/classType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/ebgaramondmedium"
                        android:hint="@string/class_type"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/classNameField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/classTypeField">

                    <AutoCompleteTextView
                        android:id="@+id/className"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/ebgaramondmedium"
                        android:hint="@string/choose_class"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/classStrengthField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/class_strength"
                    app:layout_constraintTop_toBottomOf="@id/classNameField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/classStrength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:fontFamily="@font/ebgaramondmedium" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/uploadButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/classStrengthField">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/ic_baseline_cloud_upload_24"
                        android:contentDescription="@string/upload_excel_button" />

                    <TextView
                        android:id="@+id/fileNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/ebgaramondbold"
                        android:padding="12dp"
                        android:text="@string/click_here_to_select_the_file" />

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/ebgaramondsemibold"
                    android:text="@string/create_class"
                    app:cornerRadius="4dp"
                    app:layout_constraintTop_toBottomOf="@id/uploadButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>