<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:padding="12dp"
    tools:context=".ui.QuickAttendance">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/innerLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp">

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/quick_attendance"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/innerLayout1"
                    tools:ignore="SpUsage" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/qaDegreeNameField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/text2">

                    <AutoCompleteTextView
                        android:id="@+id/qaDegreeName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/ebgaramondmedium"
                        android:hint="@string/choose_class"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/qaTimeNameField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/qaDegreeNameField">

                    <AutoCompleteTextView
                        android:id="@+id/qaTimeName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/ebgaramondmedium"
                        android:hint="@string/time"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/qaAttendanceTypeField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/qaTimeNameField">

                    <AutoCompleteTextView
                        android:id="@+id/qaAttendanceTypeName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/ebgaramondmedium"
                        android:hint="@string/choose_attendance_type"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/ebgaramondbold"
                    android:text="@string/attendance_details"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/qaAttendanceTypeField"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ebgaramondbold"
                    android:text="@string/note_enter_the_comma_separated_values"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text3"
                    tools:ignore="SpUsage" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rollNoField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/roll_number"
                    app:layout_constraintTop_toBottomOf="@id/text4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rollNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789,"
                        android:fontFamily="@font/ebgaramondmedium"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lateralRollNoField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/lateral_entry_number"
                    app:layout_constraintTop_toBottomOf="@id/rollNoField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lateralRollNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789,"
                        android:fontFamily="@font/ebgaramondmedium"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitAttendance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/ebgaramondsemibold"
                    android:text="@string/submit_attendance"
                    app:cornerRadius="4dp"
                    app:layout_constraintTop_toBottomOf="@id/lateralRollNoField" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>