<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background1"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ViewAttendance">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerLayout1"
            android:padding="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/view_attendance"
                app:layout_constraintTop_toTopOf="@id/innerLayout1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vaDegreeNameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text2">

                <AutoCompleteTextView
                    android:id="@+id/vaDegreeName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ebgaramondmedium"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/choose_class"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vaDateField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:layout_constraintTop_toBottomOf="@id/vaDegreeNameField"
                tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vaDate"
                android:cursorVisible="false"
                android:focusable="false"
                android:fontFamily="@font/ebgaramondmedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vaAttendanceTypeField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vaDateField">

                <AutoCompleteTextView
                    android:id="@+id/vaAttendanceTypeName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/ebgaramondmedium"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/choose_attendance_type"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewAttendance"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:cornerRadius="4dp"
                android:fontFamily="@font/ebgaramondsemibold"
                android:text="@string/get_attendance"
                app:layout_constraintTop_toBottomOf="@id/vaAttendanceTypeField"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>